Added Github and Linkedin links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h1>Kevin Docanto</h1>
       </div>
       <ul class="nav__links">
-        <li class="nav__link"><a href="">Github</a></li>
-        <li class="nav__link"><a href="">LinkedIn</a></li>
+        <li class="nav__link"><a href="https://github.com/KevinDocanto/">Github</a></li>
+        <li class="nav__link"><a href="https://www.linkedin.com/in/kevin-do-canto-93615a180/">LinkedIn</a></li>
       </ul>
     </nav>
 
