--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+      s
     />
   </head>
   <body>
@@ -30,8 +31,14 @@
         <h1>Kevin Docanto</h1>
       </div>
       <ul class="nav__links">
-        <li class="nav__link"><a href="https://github.com/KevinDocanto/">Github</a></li>
-        <li class="nav__link"><a href="https://www.linkedin.com/in/kevin-do-canto-93615a180/">LinkedIn</a></li>
+        <li class="nav__link">
+          <a href="https://github.com/KevinDocanto/">Github</a>
+        </li>
+        <li class="nav__link">
+          <a href="https://www.linkedin.com/in/kevin-do-canto-93615a180/"
+            >LinkedIn</a
+          >
+        </li>
       </ul>
     </nav>
 
