--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="heading">Education</h1>
           <h3>
             I am currently a junior student at Brooklyn College pursuing a
-            bachelor's degree in Information Systems. Before studying at
+            bachelor's degree in Computer Science. Before studying at
             Brooklyn College, I have graduated with an Associate's Degree at
             Kingsborough with a Computer Information Systems degree.
           </h3>
